перевод и исправление букмарков переведенных

--- a/localization/russian/bookmark/bm_361_apostate_l_russian.yml
+++ b/localization/russian/bookmark/bm_361_apostate_l_russian.yml
@@ -4,6 +4,6 @@
 
  #Император Юлиан !
  bookmark_apostate_julian:0 "Император Юлиан II "Отступник"" 
- bookmark_apostate_julian_desc:0 "Юлиан II был императором Римской империи с 361 года до своей безвременной смерти в 363 году нашей эры. Наполовину племянник Константина Великого, Юлиан отличался от своих родственников в одном отношении; религия. Отказавшись от христианства, Юлиан вместо этого принял некогда видный эллинский пантеон империи, дав ему прозвище «Отступник» среди своих христианских противников. \n\n#bold В 363 году нашей эры Юлиан храбро погиб во время катастрофического похода против империи Сасанидов, войдя в историю как последний языческий правитель Римской империи. Можете ли вы сделать что-то другое?"
+ bookmark_apostate_julian_desc:0 "Юлиан II был императором Римской империи с 361 года до своей безвременной смерти в 363 году нашей эры. Наполовину племянник Константина Великого, Юлиан отличался от своих родственников в одном отношении; религия. Отказавшись от христианства, Юлиан вместо этого принял некогда видный эллинский пантеон империи, дав ему прозвище «Отступник» среди своих христианских противников. \n\n#bold В 363 году нашей эры Юлиан храбро погиб во время катастрофического похода против империи Сасанидов, войдя в историю как последний языческий правитель Римской империи. Можете ли вы пойти по другому пути?"
 
 
