--- a/localization/russian/bookmark/bm_476_old_north_l_russian.yml
+++ b/localization/russian/bookmark/bm_476_old_north_l_russian.yml
@@ -1,33 +1,32 @@
 ﻿l_russian:
- bm_476_old_north:0 "Henn Ogledd" #NT!
- bm_476_old_north_desc:1 "When Emperor Claudius commenced his invasion of Britain in 43 AD, he started a gradual process that led to the Roman Empire dominating the political and cultural dynamics of the British Isles through the creation of a new imperial province: Britannia.\n\nHowever, times have changed since Britain first came under the banner of the Imperial eagle. As the Western Roman Empire has collapsed under the pressure of foreign invaders and internal struggles, Britannia has largely been forgotten due to a lack of direct rule from Mediolanum or Ravenna for decades, and the unclear future for the rump states of Soissons and Dalmatia have made the British Isles far less important as opposed to the affairs of the European mainland.\n\n#bold The former province is now a battleground between different polities, cultures, and faiths, and only one can emerge victorious to reshape the destiny of the British Isles..." #NT!
+ bm_476_old_north:0 "Хен Огледд" 
+ bm_476_old_north_desc:1 "Когда император Клавдий начал свое вторжение в Британию в 43 г. н.э., он начал постепенный процесс, который привел к тому, что Римская империя доминировала в политической и культурной динамике Британских островов посредством создания новой имперской провинции: Британии.\n\n Однако времена изменились с тех пор, как Великобритания впервые выступила под знаменем Имперского орла. Поскольку Западная Римская империя рухнула под давлением иноземных захватчиков и внутренней борьбы, Британия в значительной степени была забыта из-за отсутствия прямого правления из Медиолана или Равенны на протяжении десятилетий, а неясное будущее осколочных государств Суассона и Далмации сделало Британские острова гораздо менее важны, чем дела континентальной Европы.\n\n#bold Бывшая провинция теперь является полем битвы между различными политиками, культурами и верами, и только один может выйти победителем, чтобы изменить судьбу Британские острова..." 
+ 
+ #Коэл Хенн 
+ #bookmark_pendragon_henn:0 "Проконсул Коиллус «Старый»" 
+ #bookmark_pendragon_henn_desc:0 "Коэль Хен был видной фигурой в валлийских легендах и литературе, предположительно был лидером римской провинции Британия и прародителем нескольких королевских линий в регионе, известном как «Старый Север». \n\n#bold Коэль — губернатор, управляющий землями вокруг Эбуракума; как вы обеспечите возрождение кельтов под его руководством?» 
+ #Амброзиус 
+ bookmark_old_north_ambrosius:0 "Дукс Амвросий Аврелиан" 
+ bookmark_old_north_ambrosius_desc:0 "Родившийся на островах, Амвросий вырос в эпоху упадка стабильности, хотя, поскольку родители были королевского происхождения, он смог получить хорошее образование. Однако волны саксов и ютов теперь угрожают Британии и семье Амвросия. Как король бриттов, он теперь принимает титул Дукса и поклялся защищать свою родину от этих иностранцев. Только время покажет, как сложится судьба британцев...\n\n#bold Будете ли вы маяком надежды для британцев? Или вы будете задушены превосходящими силами Водена?#" 
+ bookmark_empire_uther:0 "Утер" 
 
- #Coel Henn #NT!
- #bookmark_pendragon_henn:0 "Proconsul Coillus 'The Old'" #NT!
- #bookmark_pendragon_henn_desc:0 "Coel Hen was a prominent figure in Welsh legend and literature, purported to have been a leader in the Roman province of Britannia and serving as the progenitor of several royal lines in the region known as the 'Old North.' \n\n#bold Coel is a governor presiding over the lands around Eburacum; how will you ensure a Celtic resurgence under his guidance?" #NT!
+ #Кередиг 
+ bookmark_old_north_ceredig:0 "Возвышение Кередига" 
+ bookmark_old_north_ceredig_desc:0 "Молодой воин Кередиг еще не доказал островам свою ценность. Он служил Амвросию со своим мечом, но в глубине души знает, что он язычник, а не христианин. Его амбиции пробудили в его сердце жажду славы, и он знает, что впереди его ждет возможность. Переселенцы, например, могут быть чем-то большим, чем просто врагами...\n\n#bold Когда саксы захватят юг, вы объединитесь с ними, чтобы проложить собственный путь? Или вы продолжите отдавать свой меч римлянам?#" 
 
- #Ambrosius #NT!
- bookmark_old_north_ambrosius:0 "Dux Ambrosius Aurelianus" #NT!
- bookmark_old_north_ambrosius_desc:0 "Born in the Isles, Ambrosius grew up in an era of decaying stability, though because parents were of royal stock, he was able to gain a good education. However, waves of Saxons and Jutes now threaten Britannia and Ambroisus' family. As King of the Britons, he now assumes the title of Dux and has sworn to protect his homeland from these foreigners. Only time will tell what the ultimate fate of the Britons will be...\n\n#bold Will you be a beacon of hope for the Britons? Or will you be suffocated by the overwhelming forces of Woden?#" #NT!
- bookmark_empire_uther:0 "Uther" #NT!
+ #Риотамус 
+ bookmark_old_north_riothamus:0 "Дукс Риотамус" 
+ bookmark_old_north_riothamus_desc:0 "Риотамус был британско-римским военачальником, действовавшим в 470-х годах нашей эры, когда он сотрудничал с приходящей в упадок Западной Римской империей для борьбы с готами. После того, как Западная Римская империя рухнула, Риотам создал собственное царство на Британских островах, и в конечном итоге историк Иордан назвал его «королем бриттов».\n\n#bold Некоторые ученые предполагают, что Риотамус является одним из потенциальных источников за легендой о короле Артуре — какие легенды вдохновит ваше наследие на Британских островах?#" 
+ 
+ #Хенгест 
+ bookmark_old_north_hengest:0 "Мелкий король Хенгест" 
+ bookmark_old_north_hengest_desc:0 "Выдающийся воин, Хенгест годами терроризировал побережье Саксонии, прежде чем откликнулся на просьбу кельтов о помощи. В обмен на его услуги покойный король Вортимер предоставил ему власть. Воодушевленные этой вновь обретенной властью, ютские военачальники теперь терроризируют внутренние районы Британии. Среди хаоса Хенгест потерял своего лучшего друга и близнеца Хорсу. В то время как окончательная судьба ютов неясна, Хенгест ищет только славный путь.\n\n#bold Отомстите ли вы за смерть Хорсы, но исчезнете в истории? Или вы объедините королевство, чтобы оно существовало в течение нескольких поколений?#" 
+ bookmark_old_north_oisc:0 "Оиск" 
 
- #Ceredig #NT!
- bookmark_old_north_ceredig:0 "Comes Ceredig" #NT!
- bookmark_old_north_ceredig_desc:0 "A young warrior, Ceredig has yet to prove his worth to the Isles. He has served Ambrosius with his sword, but he knows deep down that he is a Pagan and not Christian. His ambition has sparked a desire for glory in his heart and he knows opportunity lies ahead of him. The Migrators, for instance, could be much more then mere foes...\n\n#bold As the Saxons overtake the south, will you ally with them to carve a path of your own? Or will you continue to pledge your sword to the Romans?#" #NT!
-
- #Riothamus #NT!
- bookmark_old_north_riothamus:0 "Dux Riothamus" #NT!
- bookmark_old_north_riothamus_desc:0 "Riothamus was a Britano-Roman military commander who was active during the 470s AD, when he cooperated with the declining Western Roman Empire to fight the Goths. After the Western Roman Empire collapsed, Riothamus carved out a realm of his own in the British Isles, eventually being styled as "King of the Britons" by the historian Jordanes.\n\n#bold Some scholars theorize that Riothamus is one potential source behind the legend of King Arthur - what legends will your legacy inspire in the British Isles?#" #NT!
-
- #Hengest #NT!
- bookmark_old_north_hengest:0 "Petty King Hengest" #NT!
- bookmark_old_north_hengest_desc:0 "An outstanding warrior, Hengest terrorized the Saxon shore for years before answering a Celtic plea for help. In exchange for his services, late King Vortimer granted him a seat of power. Embolded by this newfound authority, the Jutish warlords now terrorize inland Britannia. Amongst the chaos, Hengest lost his best friend and twin, Horsa. While the eventual fate of the Jutes is obscure, Hengest only seeks a glorious path.\n\n#bold Will you avenge Horsa's death but fade into history? Or will you consolidate a kingdom to last for generations?#" #NT!
- bookmark_old_north_oisc:0 "Oisc" #NT!
-
- #Aelle #NT!
- bookmark_old_north_aelle:0 "Count Ælle" #NT!
- bookmark_old_north_aelle_desc:0 "Ælle has followed the twin warriors Hengest and Horsa across the sea in their quest for fortune and glory. Now in Britannia, they have carved out a kingdom of their own. The King of Kent is growing old and frail, and while Ælle respects him, his passing will surely create opportunity for wealth and power!\n\n#bold Will you create a kingdom of your own for the south Saxons? Or will you remain loyal to Kent?#" #NT!
-
- #Cadwallon #NT!
- bookmark_old_north_cadwallon:0 "High King Cadwallon I" #NT!
- bookmark_old_north_cadwallon_desc:0 "Cadwallon I was a Welsh king who ruled over Gwynedd during the late 5th century until his death sometime between 517 and 534 AD. During his reign, the Irish were driven off of the island of Anglesey, and Gwynedd's reach consolidated across Northern Cymru.\n\n#bold With Britannia divided among disparate kings and nobles, will the Kingdom of Gwynedd bring the dream of a unified Cymru to reality?" #NT!
+ #Элла 
+ bookmark_old_north_aelle:0 "Граф Элла" 
+ bookmark_old_north_aelle_desc:0 "Элла последовал за воинами-близнецами Хенгестом и Хорсой через море в их поисках богатства и славы. Теперь в Британии они создали собственное королевство. Король Кента стареет и слабеет, и хотя Элла уважает его, его уход, несомненно, создаст возможность для богатства и власти!\n\n#bold Будете ли вы создавать собственное королевство для южных саксов? Или останетесь верны Кенту?#" 
+ 
+ #Кадваллон 
+ bookmark_old_north_cadwallon:0 "Верховный король Кадваллон I" 
+ bookmark_old_north_cadwallon_desc:0 "Кадваллон I был валлийским королем, который правил Гвинедом в конце 5 века до своей смерти где-то между 517 и 534 годами нашей эры. Во время его правления ирландцы были изгнаны с острова Англси, а владения Гвинеда объединились по всему Северному Кимру.\n\n#bold Когда Британия разделена между разрозненными королями и дворянами, королевство Гвинед принесет мечту об объединении Кимру к реальности?" 
