--- a/localization/russian/bookmark/bm_476_heirs_l_russian.yml
+++ b/localization/russian/bookmark/bm_476_heirs_l_russian.yml
@@ -1,6 +1,6 @@
 ﻿l_russian:
  bm_476_heirs:0 "Наследники Рима" 
- bm_476_heirs_desc:1 "С падением Западной Римской империи бывшие провинции на западе перешли под власть германских монархов и римских претендентов.\n\nВ то время как Одоакр правит своим зарождающимся итальянским королевством, а вандалы доминируют на западных берегах Средиземного моря, другие также восстали на пепелище Рима.:\n\n В Галлии семья Сягри основала государство Суассон, но им угрожает франкская династия Меровингов.\n\nВ Италии Одоакр сталкивается с противниками в лице Фелетея из ругов и Теодориха из остготов..\n\n Через море Эурик в основном смотрит на юг, в Иберию, и только Свебское королевство под властью Герменериха является потенциальным соперником.\n\n#bold В Западной Европе пал орел — кому удастся создать такое же глубокое наследие, как империя Вечного города?#!" 
+ bm_476_heirs_desc:1 "С падением Западной Римской империи бывшие провинции на западе перешли под власть германских монархов и римских претендентов.\n\nВ то время как Одоакр правит своим зарождающимся итальянским королевством, а вандалы доминируют на западных берегах Средиземного моря, другие также восстали на пепелище Рима:\n\nВ Галлии семья Сягри основала государство Суассон, но им угрожает франкская династия Меровингов.\n\nВ Италии Одоакр сталкивается с противниками в лице Фелетея из ругов и Теодориха из остготов.\n\nЧерез море Эурик в основном смотрит на юг, в Иберию, и только Свебское королевство под властью Герменериха является потенциальным соперником.\n\n#bold В Западной Европе пал орел — кому удастся создать такое же глубокое наследие, как империя Вечного города?#!" 
 
  #Герменерих I 
  bookmark_heirs_hermenerich:0 "Король Германерих I" 
@@ -12,7 +12,7 @@
 
  #Эурик I 
  bookmark_heirs_euric:0 "Король Эйрик I" 
- bookmark_heirs_euric_desc:0 "Эурик был королем вестготов с 466 года до своей смерти в 485 году нашей эры, впервые взойдя на трон после убийства своего брата в акте убийства родственников. Во время его богатого событиями правления готское право было введено в Галлии и Испании, и Эурик заставил императоров Западной и Восточной Римской империй признать независимость вестготов. К моменту его смерти в 481 г. н.э. большая часть Иберии перешла под власть вестготов после многих лет подчинения остатков римской Испании. \n\n#bold Как Эурик, возьмете ли вы то, что принадлежит вам, или вас настигнут враги?
+ bookmark_heirs_euric_desc:0 "Эурик был королем вестготов с 466 года до своей смерти в 485 году нашей эры, впервые взойдя на трон после убийства своего брата в акте убийства родственников. Во время его богатого событиями правления готское право было введено в Галлии и Испании, и Эурик заставил императоров Западной и Восточной Римской империй признать независимость вестготов. К моменту его смерти в 481 г. н.э. большая часть Иберии перешла под власть вестготов после многих лет подчинения остатков римской Испании.\n\n#bold Как Эурик, возьмете ли вы то, что принадлежит вам, или вас настигнут враги?
  
  #Хильдерик из франков 
  bookmark_heirs_childerik:0 "Хильдерик из франков" 
@@ -25,5 +25,5 @@
  bookmark_heirs_theodoric_desc:0 "Теодорих был королем остготов с 475 по 526 год нашей эры, взяв Италию под свой контроль по приказу императора Зенона между 489 и 493 годами нашей эры. Во время его правления остготы возвестили эру процветания в Италии, поскольку он возродил римскую административную практику, возвысил остатки западно-римского сената и правил империей, которая в конечном итоге простиралась от Адриатического моря до берегов Атлантики.\n\n#bold Будете ли вы следовать по тому же пути, что и Теодорих, чтобы добиться процветания для вашего народа, или искать в другом месте из Мезии?
  
  #Дукс Сиагриус 
- bookmark_ravenna_syagrius:0 "Рекс Африан Сиагриус" 
- bookmark_ravenna_syagrius_desc:0 "«Сиагрий был римским полководцем и последним правителем области Новиодунум (обычно известной как область Суассон), сменившей своего отца на этом посту до своего поражения от рук франкского короля Хлодвига I в 481 году нашей эры. Бежав после этого поражения, Сиагрий был затем заключен вестготами в тюрьму и доставлен к победившим франкам, где вскоре умер при загадочных обстоятельствах.\n\n#bold Хотя последний правитель Суассона встретил печальный конец, можете ли вы изменить его судьбу ?#!" 
+ bookmark_ravenna_syagrius:0 "Рекс Африан Сиагрий" 
+ bookmark_ravenna_syagrius_desc:0 "Сиагрий был римским полководцем и последним правителем области Новиодунум (обычно известной как область Суассон), сменившей своего отца на этом посту до своего поражения от рук франкского короля Хлодвига I в 481 году нашей эры. Бежав после этого поражения, Сиагрий был затем заключен вестготами в тюрьму и доставлен к победившим франкам, где вскоре умер при загадочных обстоятельствах.\n\n#bold Хотя последний правитель Суассона встретил печальный конец, можете ли вы изменить его судьбу ?#!" 
